Added in an AC hit check that shows in rolled functions against all targets.

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,11 +11,9 @@
       "Roll": { "long": "Roll", "abbr": "roll" },
       "Cmax": { "long": "Critical Max", "abbr": "cmax" },
       "Cmin": { "long": "Critical Min", "abbr": "cmin" },
-      "WillDC": { "long": "Will DC", "abbr": "willDC" },
-      "FortDC": { "long": "Fortitude DC", "abbr": "fortDC" },
-      "PhysDC": { "long": "Physical DC", "abbr": "physDC" },
-      "AcroDC": { "long": "Acrobatics DC", "abbr": "acroDC" },
-      "WitsDC": { "long": "Wits DC", "abbr": "witsDC" }
+      "Fmin": { "long": "Failure Min", "abbr": "fmin" },
+      "Fmax": { "long": "Failure Max", "abbr": "fmax" },
+      "sens": { "long": "Sensitivity", "abbr": "sens" }
     },
     "SheetLabels": {
       "Actor": "EventideRpSystem Actor Sheet",
