MAJOR OVERHAUL: ActorV2 deployed for all previously existing sheets. Closes: #9

--- a/lang/en.json
+++ b/lang/en.json
@@ -20,8 +20,58 @@
       "Actor": "EventideRpSystem Actor Sheet",
       "Item": "EventideRpSystem Item Sheet"
     },
+    "Actor": {
+      "Tabs": {
+        "Biography": "Biography",
+        "Features": "Features",
+        "Gear": "Gear",
+        "Statuses": "Statuses"
+      },
+      "base": {
+        "FIELDS": {
+          "biography": { "label": "Biography" },
+          "resolve": {
+            "value": { "label": "Resolve" },
+            "max": { "label": "Maximum Resolve" }
+          },
+          "power": {
+            "value": { "label": "Power" },
+            "max": { "label": "Maximum Power" }
+          }
+        }
+      },
+      "Character": {
+        "FIELDS": {
+          "attributes.level.value": { "label": "Level" }
+        }
+      },
+      "NPC": {
+        "FIELDS": {
+          "cr": { "label": "CR" }
+        },
+        "xp": { "label": "XP" }
+      }
+    },
     "Item": {
+      "Tabs": {
+        "Attributes": "Attributes",
+        "Description": "Description",
+        "Effects": "Effects"
+      },
+      "Gear": {
+        "FIELDS": {
+          "rollFormula": { "label": "Roll Formula" },
+          "numDice": { "label": "Number of Dice" },
+          "dieSize": { "label": "Die Size" },
+          "rollMod": { "label": "Roll Modifier" },
+          "quantity": { "label": "Quantity" },
+          "weight": { "label": "Weight" }
+        }
+      },
       "Spell": {
+        "FIELDS": {
+          "level": { "label": "Spell Level" }
+        },
         "SpellLVL": "Level {level} Spells",
         "AddLVL": "Add LVL {level}"
       }
@@ -34,14 +84,13 @@
       "Inactive": "Inactive Effects"
     }
   },
-
   "TYPES": {
     "Actor": {
       "character": "Character",
       "npc": "NPC"
     },
     "Item": {
-      "item": "Item",
+      "gear": "Gear",
       "feature": "Feature",
       "spell": "Spell",
       "status": "Status"
