Added a targeted boolean to ensure that a target is selected if a combat power SHOULD have a target and defaulted it to true.

--- a/lang/en.json
+++ b/lang/en.json
@@ -72,6 +72,7 @@
       "CombatPower": {
         "FIELDS": {
           "cost": { "label": "Cost" },
+          "targeted": { "label": "Requires Target?" },
           "roll": {
             "type": { "label": "Roll Type" },
             "ability": { "label": "Ability" },
