Basic implementation of "prerequisites" tab.

--- a/lang/en.json
+++ b/lang/en.json
@@ -57,7 +57,8 @@
       "Tabs": {
         "Attributes": "Attributes",
         "Description": "Description",
-        "Effects": "Effects"
+        "Effects": "Effects",
+        "Prerequisites": "Prerequisites"
       },
       "Gear": {
         "FIELDS": {
