Added check box for checking if an actor name should be added to the roll for any item.

--- a/lang/en.json
+++ b/lang/en.json
@@ -54,6 +54,13 @@
       }
     },
     "Item": {
+      "Base": {
+        "FIELDS": {
+          "rollActorName": {
+            "label": "Add Actor Name?"
+          }
+        }
+      },
       "Tabs": {
         "Attributes": "Attributes",
         "Description": "Description",
