Added a checkbox to control the new item toggle functionality.

--- a/lang/en.json
+++ b/lang/en.json
@@ -57,7 +57,7 @@
       "Base": {
         "FIELDS": {
           "rollActorName": {
-            "label": "Add Actor Name?"
+            "label": "Add Actor Name To Chat Messages:"
           }
         }
       },
