Implemented usage info into combat powers.

--- a/lang/en.json
+++ b/lang/en.json
@@ -80,6 +80,7 @@
       "CombatPower": {
         "FIELDS": {
           "cost": { "label": "Cost" },
+          "usageInfo": { "label": "Usage Info" },
           "targeted": { "label": "Requires Target?" },
           "textColor": { 
             "label": "Text Color",
