Took a novel approach to translation handling: will be updating other files later on to use the same method.

--- a/lang/en.json
+++ b/lang/en.json
@@ -21,6 +21,9 @@
       "Roll": "Roll",
       "Flat": "Flat"
     },
+    "CombatOptions": {
+      "Unaugmented": "Unaugmented"
+    },
     "SheetLabels": {
       "Actor": "EventideRpSystem Actor Sheet",
       "Item": "EventideRpSystem Item Sheet"
