--- a/lang/en.json
+++ b/lang/en.json
@@ -173,7 +173,8 @@
           "TransferGear": "Transfer gear from {target} to {selected}.",
           "RestoreTarget": "Restore {target}(s) Resolve, power, and selected statuses.",
           "TargetGear": "You need to target someone to use this gear!",
-          "InsufficientQuantity": "You don't have enough of this item to use it! (Need {cost}, have {quantity})"
+          "InsufficientQuantity": "You don't have enough of this item to use it! (Need {cost}, have {quantity})",
+          "NotEquipped": "This item is not equipped!"
         },
         "Effect": {
           "PlayerMode": "You are using the effect creator in player mode. This can only be used to create features for tokens you control. You currently have <strong>{count} tokens(s)</strong> selected.",
