--- a/lang/en.json
+++ b/lang/en.json
@@ -54,54 +54,39 @@
       "Roll": "Roll"
     },
     "Actor": {
+      "Attributes": {
+        "CR": {
+          "label": "CR"
+        },
+        "Level": {
+          "label": "Level"
+        },
+        "Power": {
+          "Max": {
+            "label": "Maximum Power"
+          },
+          "Value": {
+            "label": "Power"
+          }
+        },
+        "Resolve": {
+          "Max": {
+            "label": "Maximum Resolve"
+          },
+          "Value": {
+            "label": "Resolve"
+          }
+        },
+        "XP": {
+          "label": "XP"
+        }
+      },
       "Tabs": {
         "Biography": "Biography",
         "CombatPowers": "Combat Powers",
         "Features": "Features",
         "Gear": "Gear",
         "Statuses": "Statuses"
-      },
-      "base": {
-        "FIELDS": {
-          "biography": {
-            "label": "Biography"
-          },
-          "power": {
-            "max": {
-              "label": "Maximum Power"
-            },
-            "value": {
-              "label": "Power"
-            }
-          },
-          "resolve": {
-            "max": {
-              "label": "Maximum Resolve"
-            },
-            "value": {
-              "label": "Resolve"
-            }
-          }
-        }
-      },
-      "Character": {
-        "attributes": {
-          "level": {
-            "value": {
-              "label": "Level"
-            }
-          }
-        }
-      },
-      "NPC": {
-        "FIELDS": {
-          "cr": {
-            "label": "CR"
-          }
-        },
-        "xp": {
-          "label": "XP"
-        }
       }
     },
     "Errors": {
@@ -140,6 +125,7 @@
         "DamageTargets": "This script is designed to damage targets and heal selected tokens. If its in heal mode it will always heal selected over damaging targets."
       },
       "Sections": {
+        "ActiveGear": "Active Gear",
         "Adjustments": "Adjustments",
         "Adv": "Adv",
         "All": "All",
@@ -181,6 +167,7 @@
         "Targeted": "Targeted",
         "Text": "Text",
         "Type": "Type",
+        "UnequippedGear": "Unequipped Gear",
         "UsageInfo": "Usage Information",
         "Weight": "Weight"
       },
@@ -241,12 +228,38 @@
       }
     },
     "Item": {
-      "Tabs": {
-        "Description": "Description",
-        "Details": "Details",
-        "Effects": "Effects",
-        "Prerequisites": "Prerequisites",
-        "Attributes": "Attributes"
+      "Colors": {
+        "BgColor": {
+          "label": "Background Color",
+          "placeholder": "Enter background color"
+        },
+        "TextColor": {
+          "label": "Text Color",
+          "placeholder": "Enter text color"
+        }
+      },
+      "Descriptors": {
+        "RollActorName": {
+          "label": "Roll Actor Name"
+        },
+        "UsageInfo": {
+          "label": "Usage Info",
+          "placeholder": "e.g., 1/day"
+        }
+      },
+      "Inventory": {
+        "Cost": {
+          "label": "Cost"
+        },
+        "Quantity": {
+          "label": "Quantity"
+        },
+        "Unequip": {
+          "label": "Unequip"
+        },
+        "Weight": {
+          "label": "Weight"
+        }
       },
       "Roll": {
         "Ability": {
@@ -255,10 +268,8 @@
         "Bonus": {
           "label": "Bonus"
         },
-        "Type": {
-          "label": "Roll Type"
-        },
         "DiceAdjustments": {
+          "label": "Dice Adjustments",
           "Advantage": {
             "label": "Advantage"
           },
@@ -267,42 +278,21 @@
           },
           "Total": {
             "label": "Total Adjustment"
-          },
-          "label": "Dice Adjustments"
+          }
         },
         "Targeted": {
           "label": "Requires Target?"
+        },
+        "Type": {
+          "label": "Roll Type"
         }
       },
-      "Inventory": {
-        "Quantity": {
-          "label": "Quantity"
-        },
-        "Weight": {
-          "label": "Weight"
-        },
-        "Cost": {
-          "label": "Cost"
-        }
-      },
-      "Colors": {
-        "TextColor": {
-          "label": "Text Color",
-          "placeholder": "Enter text color"
-        },
-        "BgColor": {
-          "label": "Background Color",
-          "placeholder": "Enter background color"
-        }
-      },
-      "Descriptors": {
-        "UsageInfo": {
-          "label": "Usage Info",
-          "placeholder": "e.g., 1/day"
-        },
-        "RollActorName": {
-          "label": "Roll Actor Name"
-        }
+      "Tabs": {
+        "Description": "Description",
+        "Details": "Details",
+        "Effects": "Effects",
+        "Prerequisites": "Prerequisites",
+        "Attributes": "Attributes"
       }
     },
     "Messages": {
