--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -1,12 +1,36 @@
 {
   "EVENTIDE_RP_SYSTEM": {
     "Item": {
-      "Tabs": {
-        "Description": "Description",
-        "Details": "Details",
-        "Effects": "Effects",
-        "Prerequisites": "Prerequisites",
-        "Attributes": "Attributes"
+      "Colors": {
+        "BgColor": {
+          "label": "Background Color",
+          "placeholder": "Enter background color"
+        },
+        "TextColor": {
+          "label": "Text Color",
+          "placeholder": "Enter text color"
+        }
+      },
+      "Descriptors": {
+        "RollActorName": { "label": "Roll Actor Name" },
+        "UsageInfo": {
+          "label": "Usage Info",
+          "placeholder": "e.g., 1/day"
+        }
+      },
+      "Inventory": {
+        "Cost": {
+          "label": "Cost"
+        },
+        "Quantity": {
+          "label": "Quantity"
+        },
+        "Unequip": {
+          "label": "Unequip"
+        },
+        "Weight": {
+          "label": "Weight"
+        }
       },
       "Roll": {
         "Ability": {
@@ -15,10 +39,8 @@
         "Bonus": {
           "label": "Bonus"
         },
-        "Type": {
-          "label": "Roll Type"
-        },
         "DiceAdjustments": {
+          "label": "Dice Adjustments",
           "Advantage": {
             "label": "Advantage"
           },
@@ -27,40 +49,21 @@
           },
           "Total": {
             "label": "Total Adjustment"
-          },
-          "label": "Dice Adjustments"
+          }
         },
         "Targeted": {
           "label": "Requires Target?"
+        },
+        "Type": {
+          "label": "Roll Type"
         }
       },
-      "Inventory": {
-        "Quantity": {
-          "label": "Quantity"
-        },
-        "Weight": {
-          "label": "Weight"
-        },
-        "Cost": {
-          "label": "Cost"
-        }
-      },
-      "Colors": {
-        "TextColor": {
-          "label": "Text Color",
-          "placeholder": "Enter text color"
-        },
-        "BgColor": {
-          "label": "Background Color",
-          "placeholder": "Enter background color"
-        }
-      },
-      "Descriptors": {
-        "UsageInfo": {
-          "label": "Usage Info",
-          "placeholder": "e.g., 1/day"
-        },
-        "RollActorName": { "label": "Roll Actor Name" }
+      "Tabs": {
+        "Description": "Description",
+        "Details": "Details",
+        "Effects": "Effects",
+        "Prerequisites": "Prerequisites",
+        "Attributes": "Attributes"
       }
     }
   }
