Added in system settings support as well as several things that may be controlled by the user or gm

--- a/lang/en.json
+++ b/lang/en.json
@@ -365,5 +365,40 @@
       "gear": "Gear",
       "status": "Status"
     }
+  },
+  "SETTINGS": {
+    "MenuName": "Eventide RP System Settings",
+    "MenuHint": "Configure settings for the Eventide RP System.",
+    "InitativeFormulaName": "Initiative Formula",
+    "InitativeFormulaHint": "Formula used to calculate initiative in combat. Cannot be empty. Leave empty and save to reset to default.",
+    "InitiativeFormulaReloadTitle": "Reload Recommended",
+    "InitiativeFormulaReloadPrompt": "The initiative formula has been updated. It's recommended to reload the game for this change to fully take effect. Reload now?",
+    "InitiativeDecimalsName": "Initiative Decimal Places",
+    "InitiativeDecimalsHint": "Number of decimal places to display for initiative values.",
+    "DefaultCharacterTabName": "Default Character Sheet Tab",
+    "DefaultCharacterTabHint": "The tab that will be active by default when opening a character sheet.",
+    "TabFeatures": "Features",
+    "TabBiography": "Biography",
+    "TabStatuses": "Statuses",
+    "TabGear": "Gear",
+    "TabCombatPowers": "Combat Powers",
+    "DefaultDiceRollModeName": "Default Dice Roll Mode",
+    "DefaultDiceRollModeHint": "The default visibility mode for dice rolls.",
+    "DiceRollModePublic": "Public Roll",
+    "DiceRollModeGM": "GM Roll",
+    "DiceRollModeBlind": "Blind Roll",
+    "DiceRollModeSelf": "Self Roll",
+    "AutoRollNpcInitiativeName": "Auto-Roll NPC Initiative",
+    "AutoRollNpcInitiativeHint": "Automatically roll initiative for NPCs when combat starts.",
+    "HideNpcInitiativeRollsName": "Hide NPC Initiative Rolls",
+    "HideNpcInitiativeRollsHint": "Hide the initiative roll results for NPCs from players.",
+    "DefaultCombatRoundDurationName": "Default Combat Round Duration",
+    "DefaultCombatRoundDurationHint": "Default duration of a combat round in seconds.",
+    "UiThemeName": "UI Theme",
+    "UiThemeHint": "Choose a visual theme for the user interface.",
+    "UiThemeDefault": "Default",
+    "UiThemeDark": "Dark",
+    "UiThemeLight": "Light",
+    "UiThemeContrast": "High Contrast"
   }
 }
