--- a/lang/src/en/settings.json
+++ b/lang/src/en/settings.json
@@ -26,7 +26,10 @@
     "DiceRollModeSelf": "Self Roll",
     
     "AutoRollNpcInitiativeName": "Auto-Roll NPC Initiative",
-    "AutoRollNpcInitiativeHint": "Automatically roll initiative for NPCs when combat starts.",
+    "AutoRollNpcInitiativeHint": "Automatically roll initiative for NPCs when added to initiative.",
+
+    "AutoRollPlayerInitiativeName": "Auto-Roll Player Initiative",
+    "AutoRollPlayerInitiativeHint": "Automatically roll initiative for players when added to initiative.",
     
     "HideNpcInitiativeRollsName": "Hide NPC Initiative Rolls",
     "HideNpcInitiativeRollsHint": "Hide the initiative roll results for NPCs from players.",
