--- a/lang/src/en/messages.json
+++ b/lang/src/en/messages.json
@@ -25,6 +25,14 @@
         "Transferred": "Transferred",
         "Unequipped": "Unequipped"
       }
+    },
+    "MessageHeaders": {
+      "Status": "Status Effect: {name}",
+      "Feature": "Feature: {name}",
+      "CombatPower": "Combat Power: {name}",
+      "GearTransfer": "Gear Transfer: {name}",
+      "Restore": "Restoration: {name}",
+      "GearEquip": "Equipment Change: {name}"
     }
   }
 }
