Added additional checks for gear equip states, and settings to surpress gear equip and unequip messages.

--- a/lang/en.json
+++ b/lang/en.json
@@ -251,6 +251,9 @@
         "Cost": {
           "label": "Cost"
         },
+        "Equipped": {
+          "label": "Equipped"
+        },
         "Quantity": {
           "label": "Quantity"
         },
@@ -405,6 +408,8 @@
     "UiThemeDefault": "Default",
     "UiThemeDark": "Dark",
     "UiThemeLight": "Light",
-    "UiThemeContrast": "High Contrast"
+    "UiThemeContrast": "High Contrast",
+    "ShowGearEquipMessagesName": "Show Gear Equip Messages",
+    "ShowGearEquipMessagesHint": "Display chat messages when gear items are equipped or unequipped."
   }
 }
