--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -22,6 +22,9 @@
         "Cost": {
           "label": "Cost"
         },
+        "Equipped": {
+          "label": "Equipped"
+        },
         "Quantity": {
           "label": "Quantity"
         },
