--- a/lang/src/en/settings.json
+++ b/lang/src/en/settings.json
@@ -48,9 +48,43 @@
     "ShowGearEquipMessagesHint": "If enabled, chat messages will be created when gear items are equipped or unequipped.",
     
     "EnableSystemSoundsName": "Enable System Sounds",
-    "EnableSystemSoundsHint": "Enable or disable custom sounds for system events like equipping gear, applying status effects, etc.",
+    "EnableSystemSoundsHint": "Enable or disable custom sound effects for the system.",
     
     "SystemSoundVolumeName": "System Sound Volume",
-    "SystemSoundVolumeHint": "Adjust the volume of system sounds (0 = silent, 1 = maximum volume)."
+    "SystemSoundVolumeHint": "Adjust the volume of system sound effects.",
+    
+    "SoundSettingsName": "Sound Effects",
+    "SoundSettingsLabel": "Configure Sound Effects",
+    "SoundSettingsHint": "Configure custom sound effects for various game events.",
+    "SoundSettingsTitle": "Eventide RP System Sound Settings",
+    "SoundSettingsDescription": "Customize the sound effects used by the Eventide RP System. Leave a field blank to reset to default.",
+    "TestAllSounds": "Test All Sounds",
+    "ResetAllSounds": "Reset All Sounds",
+    "SaveSoundSettings": "Save Sound Settings",
+    "SoundSettingsSaved": "Sound settings saved successfully.",
+    
+    "SoundHealingName": "Healing Sound",
+    "SoundHealingHint": "Sound played when healing is applied.",
+    
+    "SoundDamageName": "Damage Sound",
+    "SoundDamageHint": "Sound played when damage is applied.",
+    
+    "SoundStatusApplyName": "Status Apply Sound",
+    "SoundStatusApplyHint": "Sound played when a status effect is applied.",
+    
+    "SoundStatusRemoveName": "Status Remove Sound",
+    "SoundStatusRemoveHint": "Sound played when a status effect is removed.",
+    
+    "SoundGearEquipName": "Gear Equip Sound",
+    "SoundGearEquipHint": "Sound played when gear is equipped.",
+    
+    "SoundGearUnequipName": "Gear Unequip Sound",
+    "SoundGearUnequipHint": "Sound played when gear is unequipped.",
+    
+    "SoundCombatPowerName": "Combat Power Sound",
+    "SoundCombatPowerHint": "Sound played when a combat power is used.",
+    
+    "SoundInitiativeName": "Initiative Sound",
+    "SoundInitiativeHint": "Sound played when initiative is rolled."
   }
 }
