Moved protyping error, warning, and info related strings to the translation files.

--- a/lang/en.json
+++ b/lang/en.json
@@ -439,6 +439,15 @@
     "SoundCombatPowerName": "Combat Power Sound",
     "SoundCombatPowerHint": "Sound played when a combat power is used.",
     "SoundInitiativeName": "Initiative Sound",
-    "SoundInitiativeHint": "Sound played when initiative is rolled."
+    "SoundInitiativeHint": "Sound played when initiative is rolled.",
+    "NoSoundSelected": "No sound file selected.",
+    "ErrorPlayingSound": "Error playing sound",
+    "ErrorResettingSound": "Error resetting sound",
+    "ErrorTestingSounds": "Error testing sounds",
+    "AllSoundsReset": "All sounds reset to defaults. Click Save to apply changes.",
+    "ErrorResettingAllSounds": "Error resetting all sounds",
+    "ErrorOpeningFilePicker": "Error opening file picker",
+    "ErrorSavingSoundSettings": "Error saving sound settings",
+    "SoundResetToDefault": "Sound for {0} reset to default."
   }
 }
