Updated translations for power system.

--- a/lang/en.json
+++ b/lang/en.json
@@ -426,10 +426,14 @@
     "MessageSettingsSaved": "Message settings saved successfully.",
     "GeneralMessageSettingsTitle": "General Message Settings",
     "PowerMessageSettingsTitle": "Power Message Settings",
-    "PowerMessageTextColorName": "Message Text Color",
-    "PowerMessageTextColorHint": "The color of text in power change messages.",
-    "PowerMessageBgColorName": "Message Background Color",
-    "PowerMessageBgColorHint": "The background color of power change messages.",
+    "PowerIncrementTextColorName": "Power Increase Text Color",
+    "PowerIncrementTextColorHint": "The color of text in power increase messages.",
+    "PowerIncrementBgColorName": "Power Increase Background Color",
+    "PowerIncrementBgColorHint": "The background color of power increase messages.",
+    "PowerDecrementTextColorName": "Power Decrease Text Color",
+    "PowerDecrementTextColorHint": "The color of text in power decrease messages.",
+    "PowerDecrementBgColorName": "Power Decrease Background Color",
+    "PowerDecrementBgColorHint": "The background color of power decrease messages.",
     "PowerIncrementImageName": "Power Increase Image",
     "PowerIncrementImageHint": "Image displayed when power increases.",
     "PowerDecrementImageName": "Power Decrease Image",
